hphp/hack/test/typecheck/shape/null_shape_disallows_indexing_for_expression.php
<?hh // strict

function foo(): void {
  null['a'];
}
